I got a basic move generator to work!
Only works with pawns currently but it is the foundation of only makeing
legal moves. Also worked on ray direction bitmaps so that it can work
for sliding pieces in the past.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -79,5 +79,6 @@
         "semaphore": "cpp",
         "stop_token": "cpp",
         "cinttypes": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "Disabled"
 }
